--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DATABASE_URL=postgres://postgres:EsaL1@m04!!@localhost:5432/BasicShop
+DATABASE_URL=postgres://postgres:123456@localhost:5432/BasicShop
 JWT_SECRET=supersecurekey
